--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,7 @@ footer div{
 footer a {
     color: #024e76
 }
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+}
