--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,4 +57,16 @@ footer a {
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
+    background-size: cover;
+    background-position: center;
+}
+.hero-form {
+    background-color: #fce138;
+    padding: 20px;
+    width: 500px;
+    color: #024e76;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+    /* alternatively border: solid 3px #024e76;*/
 }
